--- a/task1/animal_language.html
+++ b/task1/animal_language.html
@@ -2,32 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Язык животных</title>
 </head>
 <body>
-<p>
+
 <h2>Язык животных</h2>
-<br>
+
 <h3>Каналы связи</h3>
 
-    Различают три канала связи:
-    язык поз и телодвижений;
-    язык запахов;
-    звуковой язык.
-    Язык поз и телодвижений
-    Важную роль в обмене информацией играет язык поз и телодвижений, а в нём
+<a>Различают три канала связи:</a>
+
+<ol>
+    <li>язык поз и телодвижений;</li>
+    <li>язык запахов;</li>
+    <li>звуковой язык.</li>
+</ol>
+<h4>Язык поз и телодвижений</h4>
+<p> Важную роль в обмене информацией играет язык поз и телодвижений, а в нём
     самом - хвост и уши. Их многочисленные положения говорят о более тонких
-    оттенках настроений и намерений хозяина.
-    Язык запахов
-    Важнейшим элементом языка животных является язык запахов. У многих видов
+    оттенках настроений и намерений хозяина.</p>
+<h4>Язык запахов</h4>
+<p>Важнейшим элементом языка животных является язык запахов. У многих видов
     есть специальные запаховые железы, которые выделяют специфические для
     данного вида сильнопахнущие вещества, следы которых животное оставляет на
-    местах своего пребывания и таким образом метит границы своей территории.
-    Звуковой язык
-    Звуковой язык имеет ряд преимуществ над двумя другими. Он позволяет животным
+    местах своего пребывания и таким образом метит границы своей территории.</p>
+<h4>Звуковой язык</h4>
+<p>  Звуковой язык имеет ряд преимуществ над двумя другими. Он позволяет животным
     общаться, не видя друг друга (что нужно для языка поз и телодвижений) или
     находясь на далёком расстоянии. Использование птицами звуковых сигналов в
-    густых зарослях позволяет им общаться, хотя видеть друг друга они не могут.
-</p>
+    густых зарослях позволяет им общаться, хотя видеть друг друга они не могут.</p>
 </body>
 </html>
