fixed htmllearning navigation panel

--- a/task1/htmlLearning.html
+++ b/task1/htmlLearning.html
@@ -392,7 +392,7 @@
 
     <ul>
         <li><a class="active" href="#dl">&lt;dl&gt;</a></li>
-        <li><a href="#dd"></a>&lt;dd&gt;</li>
+        <li><a href="#dd">&lt;dd&gt;</a></li>
         <li><a href="#dt">&lt;dt&gt;</a></li>
         <li><a href="#pre">&lt;pre&gt;</a></li>
         <li><a href="#var">&lt;var&gt;</a></li>
