fixed diary and precept

--- a/task1/diary.html
+++ b/task1/diary.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Дневник партизана</title>
 </head>
 <body>
-<h3 align="center">Дневник партизана</h3>
+<h2 align="center">Дневник партизана</h2>
 <ol>
     <li><b>Вторник.</b> Выбили <a href="http://tut.by" target="_blank" title="немцы тут бай">немцев</a> с опушки. Засели в доме лесника.</li>
     <li><b>Среда.</b> Мощная контратака немцев вынудила нас оставить занятые ранее позиции.</li>
-    <li><b>Четверг.</b> Под покровом ночи смогли снова засесть в доме лесника. Курим «Беломор».</li>
+    <li><b>Четверг.</b> Под покровом ночи смогли снова засесть в доме лесника. Курим &laquo;Беломор&raquo;.</li>
     <li><b>Пятница.</b> Вернулся лесник и всех выгнал.</li>
 </ol>
 <p align="right">&copy; бородатый <a href="http://tut.by" target="blank" title="анекдот тут бай">анекдот</a></p>
@@ -29,7 +29,7 @@
             <ul type="square">
                 <li>Огурцы</li>
                 <li>Помидоры</li>
-                <li>Перцы “болгарские”</li>
+                <li>Перцы &ldquo;болгарские&rdquo;</li>
                 <ul type="circle">
                     <li>красные <i>(2 шт.)</i></li>
                     <li>желтые <i>(1 шт.)</i></li>
@@ -45,7 +45,7 @@
     </ul>
     <li>Хлебобулочные</li>
     <ul type="disc">
-        <li>Черный «Бородинский»</li>
+        <li>Черный &laquo;Бородинский&raquo;</li>
         <li>Батон <i>(2 шт.)</i></li>
     </ul>
     <li>Мясо</li>
