fixed some bugs

--- a/task1/vechno_student.html
+++ b/task1/vechno_student.html
@@ -5,7 +5,7 @@
     <title>Vechno Student</title>
 </head>
 <body>
-<h2 name="first_top">Юрий Визбор.</h2>
+<h2><a name="first_top">Юрий Визбор.</a></h2>
 <h3>О самом Юрие Визборе</h3>
 <p >Родной город Юрия – Москва. Его отец в семнадцатом году приехал в Россию из
 Литвы. К моменту рождения сына он был Красным командиром. Мать Юрия родом
@@ -75,13 +75,13 @@
 Берлиозом в &quot;Осуждение Фауста&quot;. Лист разработал его в своей &quot;Юмореске&quot;, а Э.
     Хумпердинк развернул в целую оперу из жизни немецких студентов.</p>
 
-<p >&quot;Гаудеамус&quot; был очень популярен в среде русского студенчества. Трудно, пожалуй,
+<p><a name="last">&quot;Гаудеамус&quot;</a> был очень популярен в среде русского студенчества. Трудно, пожалуй,
 найти старого инженера или врача, которые не знали бы этого гимна. И в наши дни в
 Ленинграде и в Тарту, во многих институтах зал встает, когда поют &quot;Гаудеамус&quot;. В
 нем слышится романтический порыв молодости, призыв верно служить своему
 народу. Недавно &quot;Комсомольская правда&quot; провела конкурс на лучший перевод
 старинного гимна студентов. Победительницей в конкурсе вышла Новелла
-    Матвеева.</p>
-<p><a name="last">1968</a></p>
+    Матвеева. <br><br> 1968</p>
+
 </body>
 </html>
