finished diary.html

--- a/task2/diary.html
+++ b/task2/diary.html
@@ -8,23 +8,27 @@
 <h2 align="center">Дневник партизана</h2>
 <img src="RedArmy.gif" alt="Image1" width="159" height="150" title="Image1" />
 <ol>
-    <li><b>Вторник.</b> Выбили <a href="http://tut.by" target="_blank" title="немцы тут бай">немцев</a> с опушки. Засели в доме лесника.</li>
+    <li><b>Вторник.</b> Выбили <a href="http://tut.by" target="_blank" title="немцы тут бай">немцев</a> с опушки.
+        Засели в
+        <img src="data:image/gif;base64,R0lGODlhDgAQAJEAAP///+bm5mZ
+        mZgAAACwAAAAADgAQAAACKYSPqct9IhyAsMEQqro8ot49QkaFYDlqKPpRWNlepGaULxWPs1e7u1EAADs=" alt="home" title="Home"> доме лесника.</li>
     <li><b>Среда.</b> Мощная контратака немцев вынудила нас оставить занятые ранее позиции.</li>
-    <li><b>Четверг.</b> Под покровом ночи смогли снова засесть в доме лесника. Курим &laquo;Беломор&raquo;.</li>
+    <li><b>Четверг.</b> Под покровом ночи смогли снова засесть в  <img src="data:image/gif;base64,R0lGODlhDgAQAJEAAP///+bm5mZ
+        mZgAAACwAAAAADgAQAAACKYSPqct9IhyAsMEQqro8ot49QkaFYDlqKPpRWNlepGaULxWPs1e7u1EAADs=" alt="home" title="Home"> доме лесника. Курим &laquo;Беломор&raquo;.</li>
     <li><b>Пятница.</b> Вернулся лесник и всех выгнал.</li>
 </ol>
 <p align="right">&copy; бородатый <a href="http://tut.by" target="blank" title="анекдот тут бай">анекдот</a></p>
 <hr/>
 <h2 align="center">Продукты</h2>
 <ol>
-    <li>Молочные продукты
+    <li style="text-transform: uppercase">Молочные продукты</li>
         <ul type="square">
-            <li>Молоко <i>(2 пакета)</i></li>
+            <li>Молоко <a style="font-style: italic">(2 пакета)</a></li>
             <li>Масло</li>
             <li>Кефир</li>
             <li>Творог</li>
         </ul>
-    <li>Овощи и фрукты</li>
+    <li style="text-transform: uppercase">Овощи и фрукты</li>
     <ul type="disc">
         <li>Овощи
             <ul type="square">
@@ -32,27 +36,27 @@
                 <li>Помидоры</li>
                 <li>Перцы &ldquo;болгарские&rdquo;</li>
                 <ul type="circle">
-                    <li>красные <i>(2 шт.)</i></li>
-                    <li>желтые <i>(1 шт.)</i></li>
+                    <li>красные <a style="font-style: italic">(2 шт.)</a></li>
+                    <li>желтые <ia style="font-style: italic"(1 шт.)</i></li>
                 </ul>
             </ul>
         </li>
         <li>Фрукты</li>
         <ul type = "square">
             <li>Яблоки</li>
-            <li>Сливы</li>
+            <li style="text-decoration: line-through">Сливы</li>
             <li>Груши</li>
         </ul>
     </ul>
-    <li>Хлебобулочные</li>
+    <li style="text-transform: uppercase">Хлебобулочные</li>
     <ul type="disc">
         <li>Черный &laquo;Бородинский&raquo;</li>
-        <li>Батон <i>(2 шт.)</i></li>
+        <li>Батон <a style="font-style: italic">(2 шт.)</a></li>
     </ul>
-    <li>Мясо</li>
+    <li style="text-transform: uppercase">Мясо</li>
     <ul type="square">
-        <li>Куриное филе</li>
-        <li>Говяжья вырезка</li>
+        <li style="font-weight: bold">Куриное филе</li>
+        <li style="text-decoration: line-through">Говяжья вырезка</li>
     </ul>
 </ol>
 
