moved png to resource folder

--- a/task2/diary.html
+++ b/task2/diary.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h2 align="center">Дневник партизана</h2>
-<img src="RedArmy.gif" alt="Image1" width="159" height="150" title="Image1" />
+<img src="resources/RedArmy.gif" alt="Image1" width="159" height="150" title="Image1" />
 <ol>
     <li><b>Вторник.</b> Выбили <a href="http://tut.by" target="_blank" title="немцы тут бай">немцев</a> с опушки.
         Засели в
