added new changes for picture html

--- a/task2/picture.html
+++ b/task2/picture.html
@@ -6,8 +6,9 @@
     <title>Picture page</title>
 </head>
 <body>
-<h1>Picture Explanation</h1>
+
 <div class="main">
+    <h1 style="width: 65%;margin-top: 3%">Заметка: как использовать HTML "picture" для адаптивных изображений</h1>
     <h2>Вначале о проблеме</h2>
 
     <p>Времена попиксельного (pixel perfect) и дизайна фиксированной ширины (fixed-width) ушли в прошлое.
@@ -55,7 +56,8 @@
         или книжную (portrait) версию изображения в зависимости от ориентации устройства, к тому же можно
         одновременно проверять размеры в этих выражениях. Например:
     </p>
-    <img src="resources/pictureTagWithMediaAtribute.png" alt="withMediaAttribute" title="withMediaAttribute" width="100%">
+    <img src="resources/pictureTagWithMediaAtribute.png" alt="withMediaAttribute" title="withMediaAttribute"
+         width="100%">
     <p>Этот код загружает уменьшенную альбомную (landscape) версию изображения для устройств
         с малым экраном и соответствующей ориентацией. И увеличенную версию того же изображения для устройств
         с большим экраном.</p>
@@ -65,12 +67,25 @@
     <p>Если вы хотите предоставлять изображения в другом разрешении для дисплеев с повышенной плотностью пикселей,
         это можно сделать, указав дополнительные имена файлов в атрибуте srcset. Давайте к примеру посмотрим на
         наш первый кусок кода с добавлением обработки для Retina 2x дисплеев:</p>
-    <img src="resources/pictureTagForDifferentDisplays.png" alt="DifferentDisplays" title="DifferentDisplays" width="100%">
+    <img src="resources/pictureTagForDifferentDisplays.png" alt="DifferentDisplays" title="DifferentDisplays"
+         width="100%">
     <p>Т.к. сначала обрабатывается media query, вы можете управлять размерами изображения,
         с которыми оно будет показано на экране. Затем будет проверяться плотность пикселей:
         если дисплей поддерживает повышенную плотность и в пользовательских настройках есть на это разрешение
         - будут загружены соответствующие версии изображений.</p>
-    <h2>Плюсы и минусы</h2>
+    <h2>Плюсы</h2>
+    <ul>
+        <li>Загружать изображения с высоким разрешением для дисплеев с повышенной плотностью пикселей.</li>
+        <li>Загружать по-разному ориентированные изображения в разных пропорциях для того,
+            чтобы соответствовать изменениям в макете при разных ширинах.
+        </li>
+        <li>Загружать файлы изображений соответствующего размера, эффективно используя пропускную способность.</li>
+    </ul>
+    <h2>Минусы</h2>
+    <ul>
+        <li>Не поддерживается Safari браузером.</li>
+        <li>Возможны дополнительные HTTP-запросы</li>
+    </ul>
 
 </div>
 </body>
