--- a/task2/picture.html
+++ b/task2/picture.html
@@ -21,12 +21,12 @@
     <p>Так что же нам делать?</p>
     <h2>Текущее общепринятое решение</h2>
     <p>Как правило, вы найдете этот код на любом сайте с адаптивные дизайном:</p>
-    <img src="resources/pictureImgHeight.png" alt="imageStyles" title="imageStyles" width="100%"/>
+    <img src="resources/pictureImgHeight.png" alt="imageStyles" title="imageStyles" width="100%" height="100%"/>
     <p>Здесь используется <code>max-width: 100%;</code> для гарантии того, что изображение никогда не выйдет
         за пределы ширины родительского контейнера. Если родительский контейнер сжимается до ширины,
         меньшей чем ширина изображения - последнее сжимается вместе с контейнером. Установка <code>height: auto;</code>
         нужна для сохранения пропорций.</p>
-    <img src="resources/devices.png" width="100%" title="devices" alt="devices">
+    <img src="resources/devices.png" width="100%" height="100%" title="devices" alt="devices">
     <p>Проблема решается лишь в одном ключе, позволяя нам показывать одно и то же изображение для всех случаев.
         Но это не дает нам возможность устанавливать разные изображения для разных ситуаций.</p>
     <h2>Как работает <code>&lt;picture&gt;?</code></h2>
