added heightfor devices image

--- a/task2/picture.html
+++ b/task2/picture.html
@@ -26,7 +26,7 @@
         за пределы ширины родительского контейнера. Если родительский контейнер сжимается до ширины,
         меньшей чем ширина изображения - последнее сжимается вместе с контейнером. Установка <code>height: auto;</code>
         нужна для сохранения пропорций.</p>
-    <img src="resources/devices.png" title="devices" alt="devices">
+    <img src="resources/devices.png" title="devices" alt="devices" height="491">
     <p>Проблема решается лишь в одном ключе, позволяя нам показывать одно и то же изображение для всех случаев.
         Но это не дает нам возможность устанавливать разные изображения для разных ситуаций.</p>
     <h2>Как работает <code>&lt;picture&gt;?</code></h2>
