--- a/task2/picture.html
+++ b/task2/picture.html
@@ -21,7 +21,7 @@
     <p>Так что же нам делать?</p>
     <h2>Текущее общепринятое решение</h2>
     <p>Как правило, вы найдете этот код на любом сайте с адаптивные дизайном:</p>
-    <img src="resources/pictureImgHeight.png" alt="imageStyles" title="imageStyles"/>
+    <img src="resources/pictureImgHeight.png" alt="imageStyles" title="imageStyles" height="200"/>
     <p>Здесь используется <code>max-width: 100%;</code> для гарантии того, что изображение никогда не выйдет
         за пределы ширины родительского контейнера. Если родительский контейнер сжимается до ширины,
         меньшей чем ширина изображения - последнее сжимается вместе с контейнером. Установка <code>height: auto;</code>
@@ -47,7 +47,7 @@
     </ol>
     <p>Вот простой пример, где для случая, когда ширина видимой области меньше 768px - загружается
         уменьшенное (smaller) изображение:</p>
-    <img src="resources/pictureExampleTags.png" alt="Picturetags" title="Picturetags" >
+    <img src="resources/pictureExampleTags.png" alt="Picturetags" title="Picturetags" height="238">
     <p>Можно заметить, что синтаксис, используемый в атрибуте media является таким же, как и при использовании
         в CSS media queries. Вы можете использовать те же самые проверки, т.е. проверять <code>max-width</code>,
         <code>min-width</code>,<code>max-height</code>, <code>min-height</code>, <code>orientation</code> и т.д.</p>
@@ -56,7 +56,7 @@
         или книжную (portrait) версию изображения в зависимости от ориентации устройства, к тому же можно
         одновременно проверять размеры в этих выражениях. Например:
     </p>
-    <img src="resources/pictureTagWithMediaAtribute.png" alt="withMediaAttribute" title="withMediaAttribute"        >
+    <img src="resources/pictureTagWithMediaAtribute.png" alt="withMediaAttribute" title="withMediaAttribute"  height="304">
     <p>Этот код загружает уменьшенную альбомную (landscape) версию изображения для устройств
         с малым экраном и соответствующей ориентацией. И увеличенную версию того же изображения для устройств
         с большим экраном.</p>
@@ -66,7 +66,7 @@
     <p>Если вы хотите предоставлять изображения в другом разрешении для дисплеев с повышенной плотностью пикселей,
         это можно сделать, указав дополнительные имена файлов в атрибуте srcset. Давайте к примеру посмотрим на
         наш первый кусок кода с добавлением обработки для Retina 2x дисплеев:</p>
-    <img src="resources/pictureTagForDifferentDisplays.png" alt="DifferentDisplays" title="DifferentDisplays">
+    <img src="resources/pictureTagForDifferentDisplays.png" alt="DifferentDisplays" title="DifferentDisplays" height="228">
     <p>Т.к. сначала обрабатывается media query, вы можете управлять размерами изображения,
         с которыми оно будет показано на экране. Затем будет проверяться плотность пикселей:
         если дисплей поддерживает повышенную плотность и в пользовательских настройках есть на это разрешение
