added childbook html

--- a/task2/childbook.html
+++ b/task2/childbook.html
@@ -2,9 +2,23 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <link rel="stylesheet" type="text/css" href="textFont.css">
+    <title>ChildBook</title>
 </head>
 <body>
-
+<h1>Images explanation</h1>
+<!--Выбрал JPEG, поскольку здесь мало цветов и допустимо сжатие без особой потери качества. Также
+ на выбор повлиял и плавный переход яркости и контраста. Не выбрал GIF поскольку им не поддерживается полупрозрачность,
+ а здесь она есть.-->
+<img src="resources/carWithRedHelm.jpg" alt="Car" title="Car" height="199">
+<p>За рулем сижу довольный - <br> Ездить просто и легеко! <br> Только руль чуть-чуть огромный<br> И педали далеко.</p>
+<!--Поскольку имеено эта картинка наиболее цветная. Имеет цветовые переходы. Необходима повышенная точность
+цветов-->
+<img src="resources/train.png" alt="Train" title="Train" height="147">
+<p>Мне купили <strong>паровозик</strong> <br> Сразу два вагона возит. <br>Я включу его, и он <br>За собой везет вагон
+. <br>Вот бы мне в нем прокатиться, <br>Только жаль - не поместиться.</p>
+<!--Здесь выбрал ГИФ, поскольку изображение не многоцветное, и поддерживается простейшая прозрачность.-->
+<img src="resources/gif.gif" alt="gif" title="gif" height="257">
+<p>Нарисую я в альбоме <br><i>Голубое</i> море, <br><i>Белый</i> парус над волною <br>Бьется на просторе.</p>
 </body>
 </html>
