fixed mistakes for diary.html

--- a/task2/diary.html
+++ b/task2/diary.html
@@ -8,55 +8,55 @@
 <h2 align="center">Дневник партизана</h2>
 <img src="resources/RedArmy.gif" alt="Image1" width="159" height="150" title="Image1" />
 <ol>
-    <li><b>Вторник.</b> Выбили <a href="http://tut.by" target="_blank" title="немцы тут бай">немцев</a> с опушки.
+    <li><a style="font-weight: bold;">Вторник.</a></a> Выбили <a href="http://tut.by" target="_blank" title="немцы тут бай">немцев</a> с опушки.
         Засели в
         <img src="data:image/gif;base64,R0lGODlhDgAQAJEAAP///+bm5mZ
         mZgAAACwAAAAADgAQAAACKYSPqct9IhyAsMEQqro8ot49QkaFYDlqKPpRWNlepGaULxWPs1e7u1EAADs=" alt="home" title="Home"> доме лесника.</li>
-    <li><b>Среда.</b> Мощная контратака немцев вынудила нас оставить занятые ранее позиции.</li>
-    <li><b>Четверг.</b> Под покровом ночи смогли снова засесть в  <img src="data:image/gif;base64,R0lGODlhDgAQAJEAAP///+bm5mZ
+    <li><a style="font-weight: bold;">Среда.</a> Мощная контратака немцев вынудила нас оставить занятые ранее позиции.</li>
+    <li><a style="font-weight: bold;">Четверг.</a> Под покровом ночи смогли снова засесть в  <img src="data:image/gif;base64,R0lGODlhDgAQAJEAAP///+bm5mZ
         mZgAAACwAAAAADgAQAAACKYSPqct9IhyAsMEQqro8ot49QkaFYDlqKPpRWNlepGaULxWPs1e7u1EAADs=" alt="home" title="Home"> доме лесника. Курим &laquo;Беломор&raquo;.</li>
-    <li><b>Пятница.</b> Вернулся лесник и всех выгнал.</li>
+    <li><a style="font-weight: bold;">Пятница.</a> Вернулся лесник и всех выгнал.</li>
 </ol>
 <p align="right">&copy; бородатый <a href="http://tut.by" target="blank" title="анекдот тут бай">анекдот</a></p>
 <hr/>
 <h2 align="center">Продукты</h2>
 <ol>
-    <li style="text-transform: uppercase">Молочные продукты</li>
-        <ul type="square">
-            <li>Молоко <a style="font-style: italic">(2 пакета)</a></li>
+    <li style="text-transform: uppercase;">Молочные продукты</li>
+        <ul style = "list-style-type: square;">
+            <li>Молоко <a style="font-style: italic;">(2 пакета)</a></li>
             <li>Масло</li>
             <li>Кефир</li>
             <li>Творог</li>
         </ul>
-    <li style="text-transform: uppercase">Овощи и фрукты</li>
-    <ul type="disc">
+    <li style="text-transform: uppercase;">Овощи и фрукты</li>
+    <ul style = "list-style-type: disc;">
         <li>Овощи
-            <ul type="square">
+            <ul style = "list-style-type: square;">
                 <li>Огурцы</li>
                 <li>Помидоры</li>
                 <li>Перцы &ldquo;болгарские&rdquo;</li>
-                <ul type="circle">
-                    <li>красные <a style="font-style: italic">(2 шт.)</a></li>
-                    <li>желтые <ia style="font-style: italic"(1 шт.)</i></li>
+                <ul style = "list-style-type: circle;">
+                    <li>красные <a style="font-style: italic;">(2 шт.)</a></li>
+                    <li>желтые <a style="font-style: italic;">(1 шт.)</a></li>
                 </ul>
             </ul>
         </li>
         <li>Фрукты</li>
-        <ul type = "square">
+        <ul style = "list-style-type: square;">
             <li>Яблоки</li>
-            <li style="text-decoration: line-through">Сливы</li>
+            <li style="text-decoration: line-through;">Сливы</li>
             <li>Груши</li>
         </ul>
     </ul>
-    <li style="text-transform: uppercase">Хлебобулочные</li>
-    <ul type="disc">
+    <li style="text-transform: uppercase;">Хлебобулочные</li>
+    <ul style="list-style-type: disc;">
         <li>Черный &laquo;Бородинский&raquo;</li>
-        <li>Батон <a style="font-style: italic">(2 шт.)</a></li>
+        <li>Батон <a style="font-style: italic;">(2 шт.)</a></li>
     </ul>
-    <li style="text-transform: uppercase">Мясо</li>
-    <ul type="square">
-        <li style="font-weight: bold">Куриное филе</li>
-        <li style="text-decoration: line-through">Говяжья вырезка</li>
+    <li style="text-transform: uppercase;">Мясо</li>
+    <ul style="list-style-type: square;">
+        <li style="font-weight: bold;">Куриное филе</li>
+        <li style="text-decoration: line-through;">Говяжья вырезка</li>
     </ul>
 </ol>
 
