updated childbook with correct image extensions

--- a/task2/childbook.html
+++ b/task2/childbook.html
@@ -10,11 +10,11 @@
 <!--Выбрал JPEG, поскольку здесь мало цветов и допустимо сжатие без особой потери качества. Также
  на выбор повлиял и плавный переход яркости и контраста. Не выбрал GIF поскольку им не поддерживается полупрозрачность,
  а здесь она есть.-->
-<img src="resources/carWithRedHelm.jpg" alt="Car" title="Car" height="199">
+<img src="resources/carWithRedHelm.png" alt="Car" title="Car" height="199">
 <p>За рулем сижу довольный - <br> Ездить просто и легеко! <br> Только руль чуть-чуть огромный<br> И педали далеко.</p>
 <!--Поскольку имеено эта картинка наиболее цветная. Имеет цветовые переходы. Необходима повышенная точность
 цветов-->
-<img src="resources/train.png" alt="Train" title="Train" height="147">
+<img src="resources/train.jpg" alt="Train" title="Train" height="147">
 <p>Мне купили <strong>паровозик</strong> <br> Сразу два вагона возит. <br>Я включу его, и он <br>За собой везет вагон
 . <br>Вот бы мне в нем прокатиться, <br>Только жаль - не поместиться.</p>
 <!--Здесь выбрал ГИФ, поскольку изображение не многоцветное, и поддерживается простейшая прозрачность.-->
