--- a/task2/picture.html
+++ b/task2/picture.html
@@ -6,85 +6,58 @@
     <title>Picture page</title>
 </head>
 <body>
-
 <div class="main">
-    <h1 style="width: 65%;margin-top: 3%">Заметка: как использовать HTML "picture" для адаптивных изображений</h1>
-    <h2>Вначале о проблеме</h2>
-
-    <p>Времена попиксельного (pixel perfect) и дизайна фиксированной ширины (fixed-width) ушли в прошлое.
-        Теперь во времена широкоформатных мониторов, интернет телевидения, планшетов и смартфонов различных
-        размеров наши дизайны должны удовлетворять любому устройству шириной от 320px до потенциальных 7680px.</p>
-    <p>Вместе с множеством разрешений экранов приходит необходимость в сжатии или растяжении изображений для
-        того, чтобы соответствовать различным требованиям. Это может оказаться проблей, т.к. за исключением векторной
-        графики, у подавляющего большинства изображений есть базовая ширина в px, которую нельзя изменить.
-    </p>
-    <p>Так что же нам делать?</p>
-    <h2>Текущее общепринятое решение</h2>
-    <p>Как правило, вы найдете этот код на любом сайте с адаптивные дизайном:</p>
-    <img src="resources/pictureImgHeight.png" alt="imageStyles" title="imageStyles" height="200"/>
-    <p>Здесь используется <code>max-width: 100%;</code> для гарантии того, что изображение никогда не выйдет
-        за пределы ширины родительского контейнера. Если родительский контейнер сжимается до ширины,
-        меньшей чем ширина изображения - последнее сжимается вместе с контейнером. Установка <code>height: auto;</code>
-        нужна для сохранения пропорций.</p>
-    <img src="resources/devices.png" title="devices" alt="devices" height="491">
-    <p>Проблема решается лишь в одном ключе, позволяя нам показывать одно и то же изображение для всех случаев.
-        Но это не дает нам возможность устанавливать разные изображения для разных ситуаций.</p>
-    <h2>Как работает <code>&lt;picture&gt;?</code></h2>
-    <p>Основные шаги при работе с <code>&lt;picture&gt;:</code></p>
-
-    <ol>
-        <li>Создайте открывающий и закрывающий теги <code>&lt;picture&gt;&lt;/picture&gt;</code></li>
-        <li>Внутри создайте <code>&lt;source&gt;</code> элемент для каждого выражения, что хотите обработать.</li>
-        <li>Добавьте атрибут <code>media</code>, содержащий выражения для таких вещей как высота и ширина области
-            просмотра,
-            ориентация и т.д.
-        </li>
-        <li>Добавьте атрибут <code>srcset</code> с соответствующим именем файла изображения для загрузки.</li>
-        <li>Добавьте дополнительные имена файлов к атрибуту <code>srcset</code>, если нужно поддерживать
-            разную плотность пикселей, например для Retina дисплеев.
-        </li>
-        <li>Добавьте резервный (fallback) элемент <code>&lt;img&gt;</code>.</li>
-    </ol>
-    <p>Вот простой пример, где для случая, когда ширина видимой области меньше 768px - загружается
-        уменьшенное (smaller) изображение:</p>
-    <img src="resources/pictureExampleTags.png" alt="Picturetags" title="Picturetags" height="238">
-    <p>Можно заметить, что синтаксис, используемый в атрибуте media является таким же, как и при использовании
-        в CSS media queries. Вы можете использовать те же самые проверки, т.е. проверять <code>max-width</code>,
-        <code>min-width</code>,<code>max-height</code>, <code>min-height</code>, <code>orientation</code> и т.д.</p>
+    <h1 align="center"><code>&lt;picture&gt;</code></h1>
+    <h2>Описание проблемы</h2>
     <p>
-        Эти проверки можно использовать для того, чтобы например загружать альбомную (landscape)
-        или книжную (portrait) версию изображения в зависимости от ориентации устройства, к тому же можно
-        одновременно проверять размеры в этих выражениях. Например:
+        При верстке адаптивных страниц обычно используется следующий код <br>
+        для того чтобы изображение не выходило за рамки родительского контэйнера:
     </p>
-    <img src="resources/pictureTagWithMediaAtribute.png" alt="withMediaAttribute" title="withMediaAttribute"  height="304">
-    <p>Этот код загружает уменьшенную альбомную (landscape) версию изображения для устройств
-        с малым экраном и соответствующей ориентацией. И увеличенную версию того же изображения для устройств
-        с большим экраном.</p>
-    <p>Если устройство имеет книжную (portrait) ориентацию - загружается книжная версия изображения,
-        уменьшенная для устройств с малым и увеличенная для устройств с большим экраном.
+    <img src="resources/imgProperties.png" title="imgProp" alt="imgProp" width="60%" height="60%">
+    <p>В данном варианте мы получим одно и тоже изображение для всех девайсов. <br>
+        Но именно тэг <code>&lt;picture&gt;</code> дает возможность получить <i>разные</i> изображения под разные
+        размеры дисплеев.
     </p>
-    <p>Если вы хотите предоставлять изображения в другом разрешении для дисплеев с повышенной плотностью пикселей,
-        это можно сделать, указав дополнительные имена файлов в атрибуте srcset. Давайте к примеру посмотрим на
-        наш первый кусок кода с добавлением обработки для Retina 2x дисплеев:</p>
-    <img src="resources/pictureTagForDifferentDisplays.png" alt="DifferentDisplays" title="DifferentDisplays" height="228">
-    <p>Т.к. сначала обрабатывается media query, вы можете управлять размерами изображения,
-        с которыми оно будет показано на экране. Затем будет проверяться плотность пикселей:
-        если дисплей поддерживает повышенную плотность и в пользовательских настройках есть на это разрешение
-        - будут загружены соответствующие версии изображений.</p>
+    <h2>Синтаксис</h2>
+    <h3>Пример использования</h3>
+    <p>
+        Здесь видно, что через аттрибут <code>media</code> задается входное условие для дисплея.<br>
+        Тэгом <code>srcset</code> устанавливается имя файла, который должен быть установлен к этому размеру дисплея.
+    </p>
+    <img src="resources/Default.png" alt="default" title="default" width="60%" height="60%"/>
+    <p>
+        В случае если это условие для дисплея не выполнится, то загрузится картинка с имеенем <code>default.jpg</code>
+    </p>
+    <h3>Portrait Landscape ориентация</h3>
+    <p>Также существует возможность задать ориентацию дисплея, как <code>landscape</code> или <code>portrait</code></p>
+    <img src="resources/lanscape.png" alt="landscape" title="lanscape" width="60%" height="60%">
+    <p> В данном варианте если дисплей будет иметь альбомную ориентацию, то загрузится соответствующая картинка,
+        адаптированная
+        под эту ориентацию.
+    </p>
+    <h3>Retina экраны</h3>
+    <p>
+        Еще одной отличетельной возможностью тэга <code>picture</code> является обработка Retina дисплеев.
+    </p>
+    <img src="resources/retina.png" alt="retina" title="retina" width="60%" height="60%">
+    <p>
+        В данном примере произойдет проверка: поддерживает ли дисплей высокую плотность пикселей.
+        В том случае, если это так, то зашрузится изображение высокой четкости.
+    </p>
     <h2>Плюсы</h2>
     <ul>
-        <li>Загружать изображения с высоким разрешением для дисплеев с повышенной плотностью пикселей.</li>
-        <li>Загружать по-разному ориентированные изображения в разных пропорциях для того,
-            чтобы соответствовать изменениям в макете при разных ширинах.
-        </li>
-        <li>Загружать файлы изображений соответствующего размера, эффективно используя пропускную способность.</li>
+        <li>Подбор соответствующей картинки под Retina экраны (хотя, мне кажется, что это можно и через JS сделать)</li>
+        <li>Благодарю этому тэгу появилась возможность более гибкого адаптирования изображений под различные размеры дисплеев</li>
     </ul>
     <h2>Минусы</h2>
     <ul>
-        <li>Не поддерживается Safari браузером.</li>
-        <li>Возможны дополнительные HTTP-запросы</li>
+        <li>Нет поддержки тэга в Safari браузере, следовательно большинство пользователей на Mac Os не
+            увидят преимущество этого тэга</li>
+        <li>Довольно громоздкий интерфейс по сравнению с <code>img</code></li>
+        <li>Если браузер поддерживет <code>srcset</code>, но не поддерживает <code>picture</code>,
+        то пойдет дополнительный запрос на картинку, которая указана в <code>img</code>. Соответственно потеряется
+        время на загрузку страницы.</li>
     </ul>
-
 </div>
 </body>
 </html>
