updated tarin jpg

--- a/task2/childbook.html
+++ b/task2/childbook.html
@@ -14,7 +14,7 @@
 <p>За рулем сижу довольный - <br> Ездить просто и легеко! <br> Только руль чуть-чуть огромный<br> И педали далеко.</p>
 <!--Поскольку имеено эта картинка наиболее цветная. Имеет цветовые переходы. Необходима повышенная точность
 цветов-->
-<img src="resources/train.jpg" alt="Train" title="Train" height="147">
+<img src="resources/Train.jpg" alt="Train" title="Train" height="147">
 <p>Мне купили <strong>паровозик</strong> <br> Сразу два вагона возит. <br>Я включу его, и он <br>За собой везет вагон
 . <br>Вот бы мне в нем прокатиться, <br>Только жаль - не поместиться.</p>
 <!--Здесь выбрал ГИФ, поскольку изображение не многоцветное, и поддерживается простейшая прозрачность.-->
