--- a/task3/external_fonts.html
+++ b/task3/external_fonts.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>external_fonts</title>
-    <link rel="stylesheet" type="text/css" href="fonts.css">
+    <link rel="stylesheet" type="text/css" href="resources/fonts.css">
     <link href="https://fonts.googleapis.com/css?family=PT+Serif" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Marck+Script" rel="stylesheet">
 </head>
