--- a/task4/overflow-test.html
+++ b/task4/overflow-test.html
@@ -5,29 +5,34 @@
     <title>Overflow</title>
 </head>
 <style>
-    div{
+    div {
         width: 400px;
         height: 100px;
         background-color: white;
         padding: 15px;
         margin-top: 20px;
         margin-bottom: 30px;
-        margin-left: 33%;
+        margin-left: auto;
+        margin-right: auto;
         border-top: 6px double green;
         border-bottom: 6px double green;
     }
+
     div.first {
         overflow: scroll;
     }
+
     div.second {
         overflow: hidden;
 
     }
-    div.third{
+
+    div.third {
 
         overflow: scroll;
     }
-    div p{
+
+    div p {
         color: #999988;
         text-align: justify;
         text-indent: 25px;
