fixed background for cats

--- a/task4/pocker.html
+++ b/task4/pocker.html
@@ -5,6 +5,70 @@
     <title>Poker</title>
 </head>
 <body>
+<style>
 
+    #topLeft {
+        display: inline-block;
+        width: 100px;
+        height: 104px;
+        background: url("resources/topLeft1.png") no-repeat left top;
+    }
+
+    #topRight {
+        display: inline-block;
+        width: auto;
+        height: 104px;
+        background: url("resources/topRight1.png") no-repeat right top;
+    }
+
+    #topHorizont {
+        display: inline-block;
+        margin-left: 101px;
+        width: auto;
+        height: 39px;
+        background: url('resources/line.png') repeat-x;
+    }
+
+    #bottomHorizont {
+        margin-left: 101px;
+        padding-top: 67px;
+        width: auto;
+        height: 37px;
+        background: url('resources/line.png') repeat-x 0% 100%;
+    }
+
+    #lineRightVertical {
+        margin-top: 100px;
+        width: 40px;
+        height: auto;
+        background: url('resources/line1.png') repeat-y right top;
+    }
+
+    #lineVerticalLeft {
+        width: 40px;
+        height: auto;
+        background: url('resources/line1.png') repeat;
+    }
+
+    #bottomLeft {
+        width: auto;
+        height: 104px;
+        background: url('resources/bottomLeft1.png') no-repeat left bottom;
+    }
+
+    #bottomRight {
+        width: auto;
+        height: 104px;
+        background: url("resources/bottomRight1.png") no-repeat right bottom;
+    }
+
+</style>
+<div id="topLeft">
+    <div id="bottomHorizont"></div>
+</div>
+
+
+
+</div>
 </body>
 </html>
