--- a/task4/centered_block.html
+++ b/task4/centered_block.html
@@ -5,6 +5,9 @@
     <title>Cats</title>
 </head>
 <style>
+    body{
+        background: url('resources/cat-bg.gif')
+    }
     h2{
         border: 2px dotted red;
     }
@@ -16,7 +19,7 @@
         margin-top: 150px;
     }
 </style>
-<body background="resources/cat-bg.gif">
+<body>
 <h2 align="center">Все любьят котиков</h2>
 <div style="background-color: darkgreen" >
 
