--- a/task4/overflow-test.html
+++ b/task4/overflow-test.html
@@ -61,7 +61,7 @@
         И оказывается опять на линии старта.</p>
 </div>
 <div align="center" class="third">
-    <p style="width: 5000px;"> Ничто так не способствует успеху, как постоянная, ежедневная тренировка.
+    <p style="white-space: nowrap"> Ничто так не способствует успеху, как постоянная, ежедневная тренировка.
         Гениальный русский пианист А.Г.Рубинштейн говорил, что если он не сядет за
         инструмент один день, то сам замечает, что играть стал хуже, два дня -
         замечают уже родные и близкие, три - видят все. Так в любой области
