--- a/task4/table-test.html
+++ b/task4/table-test.html
@@ -20,16 +20,17 @@
 
     table {
         border: 1px solid blue;
+        width: 100%;
     }
 </style>
 <table style="border-collapse: collapse;">
     <tr bgcolor="#888888" style="color: #ffffff;">
-        <th style="width: 100px;">Название 1</th>
-        <th style="width: 100px;">Название 2</th>
-        <th style="width: 100px;">Еще название</th>
-        <th style="width: 170px;">Куча елементво</th>
-        <th style="width: 100px;">Список 1</th>
-        <th style="width: 100px;">Список 2</th>
+        <th>Название 1</th>
+        <th>Название 2</th>
+        <th>Еще название</th>
+        <th>Куча елементво</th>
+        <th>Список 1</th>
+        <th>Список 2</th>
     </tr>
     <tr>
         <td rowspan="11" align="center">JPMC</td>
