top frame is ready forpocker

--- a/task4/pocker.html
+++ b/task4/pocker.html
@@ -8,21 +8,19 @@
 <style>
 
     #topLeft {
-        display: inline-block;
-        width: 100px;
+        width: auto;
         height: 104px;
         background: url("resources/topLeft1.png") no-repeat left top;
     }
 
     #topRight {
-        display: inline-block;
         width: auto;
         height: 104px;
         background: url("resources/topRight1.png") no-repeat right top;
     }
 
     #topHorizont {
-        display: inline-block;
+
         margin-left: 101px;
         width: auto;
         height: 39px;
@@ -63,9 +61,13 @@
     }
 
 </style>
+<div>
 <div id="topLeft">
-    <div id="bottomHorizont"></div>
-</div>
+    <div id="topHorizont">
+        <div id="topRight">
+
+        </div>
+    </div>
 
 
 
